<resources>
    <string name="app_name">EmployeeDB</string>
    <string name="employee_name">Name</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_details">Update Details</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="add_employee">Add Employee</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
</resources>